--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="#Recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="#Book a table" class="nav__link">Book a table</a>
+              <a href="#Reservation" class="nav__link">Book a table</a>
             </li>
             <li>
               <a href="#Menu" class="nav__link">Menu</a>
@@ -60,11 +60,11 @@
           class="header__image"
         />
         <div class="header__footer">
-          <span>
+          <div>
             <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
             <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
-          </span>
+          </div>
           <p class="header__paragraph">
             200 Success Avenue, The Town of Triple Peaks
           </p>
@@ -106,9 +106,9 @@
             </div>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="Reservation" class="reservation"></section>
+        <section id="Menu" class="menu"></section>
+        <section id="Contacts" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
