--- a/index.html
+++ b/index.html
@@ -106,7 +106,52 @@
             </div>
           </div>
         </section>
-        <section id="Reservation" class="reservation"></section>
+        <section id="Reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form__label">
+                Name *<input
+                  type="text"
+                  class="form__input"
+                  id="name"
+                  placeholder="Name Surname"
+              /></label>
+              <label for="number-of-guests" class="form__label"
+                >Number of guests *
+                <input
+                  type="number"
+                  class="form__input"
+                  id="number-of-guests"
+                  placeholder="1-8"
+              /></label>
+              <label for="date" class="form__label"
+                >Date & time *
+                <input type="datetime-local" class="form__input" id="date"
+              /></label>
+              <label for="email" class="form__label"
+                >Your email *
+                <input
+                  type="email"
+                  class="form__input"
+                  id="email"
+                  placeholder="email@email.com"
+              /></label>
+              <button class="form__button">Book a table</button>
+              <label
+                for="checkbox"
+                class="form__label form__label_type_checkbox"
+              >
+                <input
+                  type="checkbox"
+                  class="form__checkbox"
+                  id="checkbox"
+                  checked
+                />I agree with the terms of use
+              </label>
+            </fieldset>
+          </form>
+        </section>
         <section id="Menu" class="menu"></section>
         <section id="Contacts" class="about"></section>
       </main>
